Some first model classes, some in shared "common" module, some specific to grading service